# server_mcp

./: .env.exemple  README.md  pyproject.toml  requitements.txt
src/: client.py  mathserver.py  weather.py
