[project]
name = "server-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.2",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "langfuse>=3.14.5",
    "langgraph>=1.0.9",
    "mcp>=1.26.0",
]
